[gd_scene load_steps=4 format=3 uid="uid://c3wmjn72rvyyc"]

[ext_resource type="Script" uid="uid://bgb67r0nnh5aj" path="res://game.gd" id="1_e2o6t"]
[ext_resource type="Texture2D" uid="uid://050sarcoenc7" path="res://GMTK-Board.png" id="2_e2o6t"]
[ext_resource type="AudioStream" uid="uid://c2sq6g123hrbe" path="res://sfx/success-1.mp3" id="3_feb5d"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2o6t")

[node name="Deck" type="Node" parent="."]

[node name="Trash" type="Node" parent="."]

[node name="Board" type="Node" parent="."]

[node name="Hand" type="Node" parent="."]

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_e2o6t")

[node name="Deck-1" type="Node2D" parent="."]
position = Vector2(120, 145)

[node name="Trash-1" type="Node2D" parent="."]
position = Vector2(1032, 503)

[node name="BoardPositions" type="Node2D" parent="."]

[node name="Board-1" type="Node2D" parent="BoardPositions"]
position = Vector2(416, 276)

[node name="Board-2" type="Node2D" parent="BoardPositions"]
position = Vector2(576, 276)

[node name="Board-3" type="Node2D" parent="BoardPositions"]
position = Vector2(736, 276)

[node name="HandPositions" type="Node2D" parent="."]

[node name="Hand-1" type="Node2D" parent="HandPositions"]
position = Vector2(336, 503)

[node name="Hand-2" type="Node2D" parent="HandPositions"]
position = Vector2(496, 503)

[node name="Hand-3" type="Node2D" parent="HandPositions"]
position = Vector2(656, 503)

[node name="Hand-4" type="Node2D" parent="HandPositions"]
position = Vector2(816, 503)

[node name="SFX_Discard" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_feb5d")
